--- a/Backend/api/pom.xml
+++ b/Backend/api/pom.xml
@@ -32,6 +32,22 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>io.easyspring.security</groupId>
+			<artifactId>spring-security-authorize</artifactId>
+			<version>1.1.0-RELEASE</version>
+			<type>pom</type>
+		</dependency>
+
+
+		<dependency>
+			<groupId>io.easyspring.security</groupId>
+			<artifactId>spring-security-authentication</artifactId>
+			<version>1.1.0-RELEASE</version>
+			<type>pom</type>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.3.5</version>
