--- a/Backend/api/src/main/resources/application.properties
+++ b/Backend/api/src/main/resources/application.properties
@@ -7,3 +7,15 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/blooddonation
 spring.datasource.username=root
 
 spring.datasource.password=Rossymin77
+
+
+# Configurações de e-mail SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hoaxen35@gmail.com
+spring.mail.password=ngfh shud hddq voim
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
